Wed Jan  2 03:17:46 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: pass ErrorHandler
	  to TypeType#semanticCheck.

	* net/loveruby/cflat/type/TypeTable.java (semanticCheck): check
	  duplicated member.

	* test/test.sh: invoke following test cases.

	* test/struct-semcheck7.cb: test duplicated member on struct.

	* test/union-semcheck7.cb: test duplicated member on union.

Wed Jan  2 03:00:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: composite literal removed.

	* net/loveruby/cflat/ast/CompositeLiteralNode.java: removed.

Wed Jan  2 01:32:12 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: better error
	  message.

	* test/test.sh: run following tests.

	* test/deref-semcheck1.cb: check if dereferencing int causes
	  compile error.

	* test/deref-semcheck2.cb: check if dereferencing char causes
	  compile error.

	* test/deref-semcheck3.cb: check if dereferencing struct causes
	  compile error.

Wed Jan  2 01:24:05 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: check member
	  validity for s.memb, s->memb, u.memb, u->memb.

	* net/loveruby/cflat/type/Type.java: new method #isComplexType.

	* net/loveruby/cflat/type/ComplexType.java: override it.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: should
	  resolve variable initializer.

	* net/loveruby/cflat/ast/DefinedVariable.java: new method
	  #hasInitializer.

	* test/test.sh: run tests.

	* test/struct-semcheck5.cb: check if member is valid on s.memb.

	* test/struct-semcheck6.cb: check if member is valid on
	  sptr->memb.

	* test/union-semcheck5.cb: check if member is valid on u.memb.

	* test/union-semcheck6.cb: check if member is valid on uptr->memb.

Wed Jan  2 00:38:48 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: check aref base
	  expr and index expr.
