@@ -1,3 +1,10 @@
+Wed Jan  2 04:03:10 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/TypeChecker.java: allow ptr + int,
+	  ptr - int.
+
+	* net/loveruby/cflat/ast/BinaryOpNode.java: new method #setType.
+
 Wed Jan  2 03:17:46 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/TypeResolver.java: pass ErrorHandler
